--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,15 +20,15 @@
             <div class="hem"></div>
                 <ul>
                     <li>MEMU</li>
-                    <li>CONTACT</li>
+                    <li><a href="#contacts">CONTACT</a></li>
                 </ul>
             </div>
             <div class="tep_menu">
                 <ul>
-                    <li><a href="#c">ABOUT STORY</a></li>
-                    <li><a href="#c">PROJECT</a></li>
-                    <li><a href="#c">EFFECT</a></li>
-                    <li><a href="#c">ANIMATION</a></li>
+                    <li><a href="#about">ABOUT STORY</a></li>
+                    <li><a href="#project">PROJECT</a></li>
+                    <li><a href="#effect">EFFECT</a></li>
+                    <li><a href="#anima">ANIMATION</a></li>
                 </ul>
             </div>
         </div>
@@ -127,7 +127,7 @@
     </article>
     <!--//about-->
 
-    <article>
+    <article id="about">
         <div class="about_story">
             <div class="story_text">
                 <p>My page My Own space</p>
@@ -185,7 +185,7 @@
         </div>
     </article>
 
-    <article>
+    <article id="project">
         <div class="projects">
             <div class="container">
                 <div class="proTXT">
@@ -274,7 +274,7 @@
         </div>
     </article>
 
-    <article>
+    <article id="effect">
         <div class="effects">
             <div class="effect_box">
                 <h2>EFFECT</h2>
@@ -283,7 +283,7 @@
             </div>
             <div class="effect_frame">
                 <img class="bgst" src="assets/img/bgst.png" alt="별자리"
-                    data-18500 = "height: 0px; object-fit: cover;"
+                    data-19000 = "height: 0px; object-fit: cover;"
                     data-21000 = "height: 3000px; object-fit: cover;"
                 >
                 <div class="frame left">
@@ -310,7 +310,7 @@
         </div>
     </article>
 
-    <article>
+    <article id="anima">
         <div class="animas">
             <div class="anima_box">
                 <h2>ANIMATION</h2>
@@ -359,29 +359,29 @@
                 <div class="refer_box">
                     <h3>Study planner</h3>
                     <ul>
-                        <li><a href="https://heoar.github.io/dothome21/refer-javascript/index.html">javascript</a></li>
-                        <li><a href="https://heoar.github.io/dothome21/refer-jquery/index.html">jquery</a></li>
-                        <li><a href="https://heoar.github.io/dothome21/layout/index.html">layout</a></li>
-                        <li><a href="https://heoar.github.io/dothome21/refer-html/index.html">html</a></li>
-                        <li><a href="https://heoar.github.io/dothome21/refer-css/index.html">CSS</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-javascript/index.html" target="_blank">javascript</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-jquery/index.html" target="_blank">jquery</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/layout/index.html" target="_blank">layout</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-html/index.html" target="_blank">html</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-css/index.html" target="_blank">CSS</a></li>
                     </ul>
                 </div>
                 <div class="refer_box">
                     <h3>Site Reference</h3>
                     <ul>
-                        <li><a href="https://heoar.github.io/dothome21/mega/index.html">Megabox</a></li>
-                        <li><a href="https://heoar.github.io/dothome21/site/index.html">wireframe</a></li>
-                        <li><a href="http://bhar.dothome.co.kr/project/pages/index.php">project</a></li>
-                        <li><a href="http://mybhar.dothome.co.kr/site-php/pages/main.php">php</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/mega/index.html" target="_blank">Megabox</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/site/index.html" target="_blank">wireframe</a></li>
+                        <li><a href="http://bhar.dothome.co.kr/project/pages/index.php" target="_blank">project</a></li>
+                        <li><a href="http://mybhar.dothome.co.kr/site-php/pages/main.php" target="_blank">php</a></li>
                     </ul>
                 </div>
                 <div class="refer_box">
                     <h3>Effect</h3>
                     <ul>
-                        <li><a href="https://heoar.github.io/dothome21/refer-effect/mouseEffect/index.html">mouseEffect</a></li>
-                        <li><a href="https://heoar.github.io/dothome21/refer-effect/sliderEffect/index.html">sliderEffect</a></li>
-                        <li><a href="https://heoar.github.io/dothome21/refer-effect/parallexEffect/index.html">parallexEffect</a></li>
-                        <li><a href="https://heoar.github.io/dothome21/refer-effect/gameEffect/index.html">gameEffect</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-effect/mouseEffect/index.html" target="_blank">mouseEffect</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-effect/sliderEffect/index.html" target="_blank">sliderEffect</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-effect/parallexEffect/index.html" target="_blank">parallexEffect</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-effect/gameEffect/index.html" target="_blank">gameEffect</a></li>
                     </ul>
                 </div>
                 <div class="refer_box">
@@ -397,9 +397,11 @@
             </div>
         </div>
         <div class="footer_bg">
-            <div class="footer_img">
+            <div id="contacts" class="footer_img">
                 <span>CONTACT</span>
                 <p>yuooo13@gmail.com</p>
+                <a href="https://heoar.github.io/dothome21/" target="_blank">Home-Page • https://heoar.github.io/dothome21</a>
+                <img src="assets/img/ggss.png" alt="안경">
             </div>
         </div>
     </footer>
