--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -244,10 +244,10 @@
 
     <article>
         <div class="project_frame">
-            <div class="code_view">
+            <div class="code_view1">
                 <img src="assets/img/site_naver.jpg" alt="프로젝트1">
             </div>
-            <div class="site_view">
+            <div class="site_view1">
                 <img src="assets/img/project01.jpg" alt="프로젝트1">
             </div>
             <div class="site_box left">
@@ -256,15 +256,15 @@
                     구성하고 기본 틀을<br>잡을지를 익히기 위해 연습한 제 첫번째
                     작업물 네이버 클로바사이트입니다.
                 </p>
-                <button class="site_bt"><a href="https://heoar.github.io/dothome21/site/testType03.html" target="_blank">SITE <span>View &#8641</span></a></button>
-                <button class="code_bt"><a>CODE <span>View &#8641</span></a></button>
+                <button class="site_bt1"><a href="https://heoar.github.io/dothome21/site/testType03.html" target="_blank">SITE <span>View &#8641</span></a></button>
+                <button class="code_bt1"><a>CODE <span>View &#8641</span></a></button>
             </div>
         </div>
         <div class="project_frame">
-            <div class="code_view">
+            <div class="code_view2">
                 <img src="assets/img/site_mega.jpg" alt="프로젝트2">
             </div>
-            <div class="site_view">
+            <div class="site_view2">
                 <img src="assets/img/project02.jpg" alt="프로젝트2">
             </div>
             <div class="site_box right">
@@ -273,15 +273,15 @@
                     사용자 디바이스 환경에 따라 모바일까지 호환될 수 있도록<br>
                     레이아웃 재구성 및 웹표준을 준수한 반응형 홈페이지입니다.
                 </p>
-                <button class="site_bt"><a href="https://heoar.github.io/dothome21/mega/index.html" target="_blank">SITE <span>View &#8641</span></a></button>
-                <button class="code_bt"><a>CODE <span>View &#8641</span></a></button>
+                <button class="site_bt2"><a href="https://heoar.github.io/dothome21/mega/index.html" target="_blank">SITE <span>View &#8641</span></a></button>
+                <button class="code_bt2"><a>CODE <span>View &#8641</span></a></button>
             </div>
         </div>
         <div class="project_frame">
-            <div class="code_view">
+            <div class="code_view3">
                 <img src="assets/img/site_pro.jpg" alt="프로젝트3">
             </div>
-            <div class="site_view">
+            <div class="site_view3">
                 <img src="assets/img/project03.jpg" alt="프로젝트3">
             </div>
             <div class="site_box left">
@@ -291,8 +291,8 @@
                     완성을 목표로 진행한 정보처리기사 시험 커뮤니티 사이트<br>
                     ‘정신머리’입니다.
                 </p>
-                <button class="site_bt"><a href="http://bhar.dothome.co.kr/project/pages/index.php" target="_blank">SITE <span>View &#8641</span></a></button>
-                <button class="code_bt"><a>CODE <span>View &#8641</span></a></button>
+                <button class="site_bt3"><a href="http://bhar.dothome.co.kr/project/pages/index.php" target="_blank">SITE <span>View &#8641</span></a></button>
+                <button class="code_bt3"><a>CODE <span>View &#8641</span></a></button>
             </div>
         </div>
     </article>
@@ -343,31 +343,31 @@
                     <p>Creating various animation effects using a code pen<br>
                         click on a circle around it to show its animation</p>
                     <div class="anima_show">
-                        <div class="show_center show1">
+                        <div class="show_center anima1">
                             <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="wveLWKx" data-user="heoar" style="height: 600px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
                             <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
                         </div>
-                        <div class="show_center show2">
+                        <div class="show_center anima2">
                             <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="abwbGxo" data-user="heoar" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
                             <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
                         </div>
-                        <div class="show_center show3">
+                        <div class="show_center anima3">
                             <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="abwbGyM" data-user="heoar" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
                             <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
                         </div>
-                        <div class="show_center show3">
+                        <div class="show_center anima4">
                             <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="ZEyQjog" data-user="heoar" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
                               <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
                         </div>
                         <div class="show_left">
-                            <div class="left_bt view1"></div>
-                            <div class="left_bt view2"></div>
-                            <div class="left_bt view3"></div>
+                            <div class="animabt1"></div>
+                            <div class="animabt2"></div>
+                            <div class="animabt3"></div>
                         </div>
                         <div class="show_right">
-                            <div class="right_bt view1"></div>
-                            <div class="right_bt view2"></div>
-                            <div class="right_bt view3"></div>
+                            <div class="animabt4"></div>
+                            <div class="animabt5"></div>
+                            <div class="animabt6"></div>
                         </div>
                     </div>
                 </div>
