--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -203,7 +203,21 @@
     <article>
         <div class="container">
             <div class="skill_box">
-                <img src="assets/img/skill_img.png" alt="스킬 이미지">
+                <img src="assets/img/skimg.png" alt="스킬 이미지">
+                <div class="skill_js">
+                    <img src="assets/img/sk01.png" alt="이미지">
+                    <h3>JavaScript</h3>
+                    <p>jQuery/PHP 초급</p>
+                </div>
+                <div class="skill_html">
+                    <img src="assets/img/sk02.png" alt="이미지">
+                    <h3>HTML/CSS</h3>
+                    <p>웹표준, 웹접근성을 고려한 퍼블리싱</p>
+                </div><div class="skill_poto">
+                    <img src="assets/img/sk03.png" alt="이미지">
+                    <h3>Photoshop<br>&illustration</h3>
+                    <p>기본 디자인 작업 및 툴다루기</p>
+                </div>
             </div>
         </div>
     </article>
