--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -43,7 +43,7 @@
                     <div class="title">
                         <h2>HEOAR</h2>
                         <img src="assets/img/ggs.png" alt="안경"
-                        data-0 = "transform: translate(-50%, 0%) rotate(0turn); opacity: 1; display: block;"
+                        data-0 = "transform: translate(-50%, -40%) rotate(0turn); opacity: 1; display: block;"
                         data-1100 = "transform: translate(-50%, 300%) rotate(0.1turn); opacity: 0; display: block;"
                         data-end = "transform: translate(-50%, 300%) rotate(0.1turn); opacity: 0; display:none;"
                         >
@@ -66,7 +66,7 @@
                     </div>
                     <div class="cloud">
                         <img src="assets/img/cloud.png" alt="구름"
-                        data-100 = "transform: translate(-20%, -30%)"
+                        data-100 = "transform: translate(-20%, -20%)"
                         data-1500 = "transform: translate(20%, -30%)"
                         >
                     </div>
@@ -90,33 +90,7 @@
 
             <div class="swiper-slide">
                 <div class="study">
-                    <div class="slider-inner">
-                        <div class="slider"><img src="assets/img/study01.jpg" alt="이미지1"></div>
-                        <div class="slider"><img src="assets/img/study02.jpg" alt="이미지2"></div>
-                        <div class="slider"><img src="assets/img/study03.jpg" alt="이미지3"></div>
-                        <div class="slider"><img src="assets/img/study04.jpg" alt="이미지4"></div>
-                        <div class="slider"><img src="assets/img/study05.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study06.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study07.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study08.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study09.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study10.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study11.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study12.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study13.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study14.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study15.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study16.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study17.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study18.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study19.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study20.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study21.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study22.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study23.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study24.jpg" alt="이미지5"></div>
-                        <div class="slider"><img src="assets/img/study25.jpg" alt="이미지5"></div>
-                    </div>
+                   
                 </div>
             </div>
             <div class="my_career">
@@ -160,12 +134,11 @@
         <div class="container">
             <div class="personalitys">
                 <div class="pers_box"
-                    data-4000 = "position: relative; top: 0; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1; display: none;"
-                    data-5500 = "position: relative; top: 0; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1; display: block;"
-                    data-6000 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1; display: block;"
-                    data-8000 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1; display: block;"
-                    data-8500 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1; display: block;"
-                    data-9000 = "position: relative; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:0; display: none;"
+                    data-4000 = "position: relative; top: 0; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-5719 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-8000 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-8500 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-9000 = "position: relative; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:0;"
                 >
                     <div class="txt left">
                     <h2
@@ -179,10 +152,7 @@
                     </div>
                     <div class="pers_img">
                         <div class="img_box">
-                            <img src="assets/img/me_ca.png" alt="의자">
-                            <img src="assets/img/me_na.png" alt="나">
-                            <img src="assets/img/me_sk.png" alt="커피">
-                            <img src="assets/img/me_tb.png" alt="테이블">
+                            <img src="assets/img/pers_me.png" alt="이미지">
                         </div>
                     </div>
                     <div class="txt right">
@@ -206,8 +176,8 @@
                 <img src="assets/img/skimg.png" alt="스킬 이미지">
                 <div class="skill_js">
                     <img src="assets/img/sk01.png" alt="이미지">
-                    <h3>JavaScript</h3>
-                    <p>jQuery/PHP 초급</p>
+                    <h3>Js/jQuery</h3>
+                    <p>SQL/PHP 초급</p>
                 </div>
                 <div class="skill_html">
                     <img src="assets/img/sk02.png" alt="이미지">
@@ -326,22 +296,22 @@
                 <div class="frame left">
                     <iframe src="../refer-effect/mouseEffect/index.html" frameborder="0"></iframe>
                     <img src="assets/img/frame_bar2.png" alt="하단바">
-                    <p>• 마우스 커서를 따라 다양한 효과를 적용하는 이펙트입니다</p>
+                    <p>∴ 마우스 커서를 따라 다양한 효과를 적용하는 이펙트입니다</p>
                 </div>
                 <div class="frame right">
                     <iframe src="../refer-effect/sliderEffect/index.html" frameborder="0"></iframe>
                     <img src="assets/img/frame_bar3.png" alt="하단바">
-                    <p>• 여러장의 이미지가 정해진 순서와 방향으로 넘어가는 슬라이드 이펙트입니다</p>
+                    <p>∵ 여러장의 이미지가 정해진 순서와 방향으로 넘어가는 슬라이드 이펙트입니다</p>
                 </div>
                 <div class="frame left">
                     <iframe src="../refer-effect/parallexEffect/index.html" frameborder="0"></iframe>
                     <img src="assets/img/frame_bar4.png" alt="하단바">
-                    <p>• 시간차를 두어 스크롤할때마다 해당 요소에 조금씩 변화를 주는 이펙트입니다</p>
+                    <p>∴ 시간차를 두어 스크롤할때마다 해당 요소에 조금씩 변화를 주는 이펙트입니다</p>
                 </div>
                 <div class="frame right">
                     <iframe src="../refer-effect/gameEffect/index.html" frameborder="0"></iframe>
                     <img src="assets/img/frame_bar5.png" alt="하단바">
-                    <p>• 스크립트를 이용한 간단한 게임 만들기 이펙트입니다</p>
+                    <p>∵ 스크립트를 이용한 간단한 게임 만들기 이펙트입니다</p>
                 </div>
             </div>
         </div>
@@ -357,31 +327,20 @@
                     <p>Creating various animation effects using a code pen<br>
                         click on a circle around it to show its animation</p>
                     <div class="anima_show">
-                        <div class="show_center anima1">
-                            <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="wveLWKx" data-user="heoar" style="height: 600px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
-                            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-                        </div>
-                        <div class="show_center anima2">
-                            <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="abwbGxo" data-user="heoar" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
-                            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-                        </div>
-                        <div class="show_center anima3">
-                            <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="abwbGyM" data-user="heoar" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
-                            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-                        </div>
-                        <div class="show_center anima4">
-                            <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="ZEyQjog" data-user="heoar" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
-                              <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+                        <div class="anima_img">
+
                         </div>
                         <div class="show_left">
                             <div class="animabt1"></div>
                             <div class="animabt2"></div>
                             <div class="animabt3"></div>
+                            <div class="animabt4"></div>
                         </div>
                         <div class="show_right">
                             <div class="animabt4"></div>
                             <div class="animabt5"></div>
                             <div class="animabt6"></div>
+                            <div class="animabt7"></div>
                         </div>
                     </div>
                 </div>
@@ -438,7 +397,6 @@
                 <span>CONTACT</span>
                 <p>yuooo13@gmail.com</p>
                 <a href="https://heoar.github.io/dothome21/" target="_blank">Home-Page • https://heoar.github.io/dothome21</a>
-                <img src="assets/img/ggss.png" alt="안경">
             </div>
         </div>
     </footer>
@@ -446,6 +404,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
+    <script src="assets/js/highlight.min.js"></script>
     <script src="assets/js/custom.js"></script>
     <script>
         var s = skrollr.init();
