--- a/site/testType09.html
+++ b/site/testType09.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>레이아웃</title>
 
-    <link rel="stylesheet" href="css/textType09.css">
+    <link rel="stylesheet" href="../css/textType09.css">
 </head>
 <body>
     <section>
