--- a/site/testType09.html
+++ b/site/testType09.html
@@ -7,6 +7,7 @@
     <title>레이아웃</title>
 
     <link rel="stylesheet" href="CSS/textType09.css">
+    <link rel="stylesheet" href="CSS/fonts.css">
 </head>
 <body>
     <section>
