--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@
        data-end = "height: 0;">
 
     <div class="scroll">0</div>
-    <div class="cursor"></div>
+    <div class="cursor"><span></span></div>
 
     <header>
         <div class="menu">
@@ -5209,14 +5209,14 @@ function searchBtnCheck(){
                         click on a circle around it to show its animation</p>
                     <div class="anima_show">
                         <div class="anima_img">
-                            <div>1</div>
-                            <div>2</div>
-                            <div>3</div>
-                            <div>4</div>
-                            <div>5</div>
-                            <div>6</div>
-                            <div>7</div>
-                            <div>8</div>
+                            <div>1<span><a href="#c">애니메이션 보기1 &#8641</a></span></div>
+                            <div>2<span><a href="#c">애니메이션 보기2 &#8641</a></span></div>
+                            <div>3<span><a href="#c">애니메이션 보기3 &#8641</a></span></div>
+                            <div>4<span><a href="#c">애니메이션 보기4 &#8641</a></span></div>
+                            <div>5<span><a href="#c">애니메이션 보기5 &#8641</a></span></div>
+                            <div>6<span><a href="#c">애니메이션 보기6 &#8641</a></span></div>
+                            <div>7<span><a href="#c">애니메이션 보기7 &#8641</a></span></div>
+                            <div>8<span><a href="#c">애니메이션 보기8 &#8641</a></span></div>
                         </div>
                         <div class="show_bt">
                             <div class="animabt1 left active"></div>
@@ -5269,11 +5269,11 @@ function searchBtnCheck(){
                 <div class="refer_box">
                     <h3>Figma organize</h3>
                     <ul>
-                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=358%3A29&node-id=358%3A35&scaling=min-zoom">javascript</a></li>
-                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=134%3A161&node-id=134%3A162&scaling=min-zoom">jquery</a></li>
-                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=70%3A400&node-id=70%3A413&scaling=min-zoom">mysql</a></li>
-                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=75%3A1545&node-id=75%3A1549&scaling=min-zoom">scss</a></li>
-                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=411%3A49&node-id=433%3A70&scaling=min-zoom">react</a></li>
+                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=358%3A29&node-id=358%3A35&scaling=min-zoom" target="_blank">javascript</a></li>
+                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=134%3A161&node-id=134%3A162&scaling=min-zoom" target="_blank">jquery</a></li>
+                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=70%3A400&node-id=70%3A413&scaling=min-zoom" target="_blank">mysql</a></li>
+                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=75%3A1545&node-id=75%3A1549&scaling=min-zoom" target="_blank">scss</a></li>
+                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=411%3A49&node-id=433%3A70&scaling=min-zoom" target="_blank">react</a></li>
                     </ul>
                 </div>
             </div>
